# MineSync

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  tailwind.config.cjs
.github/workflows/: release.yml  test.yml
src/: App.svelte  color.rs  config.rs  execute.rs  git.rs  index.css  lib.rs  main.rs  oldmain.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: color.rs  config.rs  dirs.rs  execute.rs  git.rs  main.rs
src/bindings/: Config.ts  Folder.ts
src/model/EditPanel/: ActionsBar.svelte  EditPanel.svelte  EditTab.svelte  tooltip.svelte
src/model/FolderList/: AddButton.svelte  FolderList.svelte
src/model/notifications/: notfications.svelte  notification.ts
src/stores/: Shared.ts
