[package]
name = "mine-sync"
version = "0.0.2"
description = "Application to sync minecraft instances with github repos"
authors = ["RobertasJ"]
license = ""
repository = "https://github.com/RobertasJ/MineSync/"
edition = "2021"
rust-version = "1.65"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["dialog-open", "path-all", "shell-open", "updater"] }
rand = "0.8.5"
directories = "4.0.1"
ts-rs = { version = "6", features = ["format"] }
tokio = { version = "1.25.0", features = ["full"] }
crossterm = "0.26.1"
git2 = "0.16.1"
execute = "0.2.11"
lazy_static = "1.4.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
